fix: ブログ記事の太字表記崩れを修正 (Markdown/HTML)

--- a/03_ブログ記事/04_note清書/2026_01/2026_01_24_1.md
+++ b/03_ブログ記事/04_note清書/2026_01/2026_01_24_1.md
@@ -24,7 +24,7 @@
 この数字がわかっていれば、あとは簡単ですよね？
 
 *   **月30万円**欲しいなら、**3店舗**作る。
-*   **月50万円**欲しいなら、**5店舗**作る。
+*   **月50万円**欲しいなら、<strong>5店舗</strong>作る。
 
 ただこれだけの話です。
 1店舗作って10万円。
@@ -35,7 +35,7 @@
 ## なぜ「レンタルスペース」だと脱サラしやすいのか？
 
 「店舗を増やすなんて大変じゃない？」
-そう思うかもしれませんが、実はレンタルスペースこそ、この**「倍々ゲーム（店舗拡大）」に適した商売**なのです。
+そう思うかもしれませんが、実はレンタルスペースこそ、この<strong>「倍々ゲーム（店舗拡大）」に適した商売</strong>なのです。
 
 理由は大きく3つあります。
 
@@ -64,7 +64,7 @@
 
 ここがブログやアフィリエイトとの決定的な違いです。
 
-レンタルスペースは、**「カンニングOK」**なビジネスです。
+レンタルスペースは、<strong>「カンニングOK」</strong>なビジネスです。
 *   売れている競合があのエリアにある
 *   どんな家具を使っているか（写真を見ればわかる）
 *   どんな内装か
@@ -85,7 +85,7 @@
 相当なセンスがある人なら早いかもしれませんが、凡人が1から初めて1年で達成できれば「めちゃくちゃ凄い」レベルですよね。
 しかも、Googleの検索アルゴリズムが変われば一瞬で収益がゼロになるリスクもあります。
 
-一方で、レンタルスペースは**「場所」という物理的な価値**を提供します。
+一方で、レンタルスペースは<strong>「場所」という物理的な価値</strong>を提供します。
 やり方が具体的で、答えが見えていて、真似がしやすい。
 だからこそ、**脱サラまでの期間を圧倒的に短くできる**し、計画が狂いにくいのです。
 
@@ -98,4 +98,4 @@
 私はこのルールに従って、店舗を増やしていきました。
 そして気づけば、会社の給料を余裕で超えていました。
 
-もしあなたが「いつか会社を辞めたい」と思っているなら、この**「確実性の高い積み上げゲーム」**をやってみることをおすすめします。
+もしあなたが「いつか会社を辞めたい」と思っているなら、この<strong>「確実性の高い積み上げゲーム」</strong>をやってみることをおすすめします。
